# finexp

./: Pipfile  README.md  basepred.ipynb  pyproject.toml  sp500tr.csv
train-2022-11-28-00-36-07/: catboost_training.json  learn_error.tsv  time_left.tsv
train-2022-11-28-00-36-07/learn/: events.out.tfevents
