[project]
name = "finexp"
version = "0.1.0"
description = "A simple demo of applying fundamentals for stock selection"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "scikit-learn",
    "jupyter",
    "catboost",
    "s3fs",
    "tensorboard",
    "shap",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []
